Тест работает